Adding endpoints: /passenger/login and /routes/add which adds a passenger to a route
